--- a/.github/workflows/change-detection.yaml
+++ b/.github/workflows/change-detection.yaml
@@ -11,7 +11,7 @@ on:
       - 'change-detection/**'
 
 jobs:
-  docker:
+  change-detection:
     runs-on: ubuntu-latest
     steps:
       -
@@ -30,6 +30,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: change-detection
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
