--- a/.github/workflows/change-detection.yaml
+++ b/.github/workflows/change-detection.yaml
@@ -30,7 +30,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: "change-detection"
+          no-cache: true
+          file: "change-detection/Dockerfile"
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
