--- a/.github/workflows/change-detection.yaml
+++ b/.github/workflows/change-detection.yaml
@@ -30,8 +30,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
-          no-cache: true
-          file: "change-detection/Dockerfile"
+          context: "{{defaultContext}}:change-detection"
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
