--- a/.github/workflows/change-apply.yaml
+++ b/.github/workflows/change-apply.yaml
@@ -30,7 +30,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:change-appl"
+          context: "{{defaultContext}}:change-apply"
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
