fix secret/cm stuff and add readme note

--- a/k8s-manifests/30-change-detection.yaml
+++ b/k8s-manifests/30-change-detection.yaml
@@ -18,6 +18,11 @@ spec:
       containers:
       - name: change-detection
         image: bentastic27/knative-route53-ddns-detection:latest
+        envFrom:
+        - secretRef:
+            name: aws-creds
+        - configMapRef:
+            name: knative-route53-ddns
         resources:
           requests:
             cpu: 50m
