--- a/k8s-manifests/10-change-apply.yaml
+++ b/k8s-manifests/10-change-apply.yaml
@@ -13,6 +13,9 @@ spec:
           ports:
           - containerPort: 8080
             protocol: TCP
+          envFrom:
+          - secretRef:
+              name: aws-creds
           livenessProbe:
             httpGet:
               path: /health
