--- a/change-detection/Dockerfile
+++ b/change-detection/Dockerfile
@@ -9,4 +9,6 @@ RUN groupadd --gid 1000 appuser && \
   useradd --uid 1000 --gid 1000 -M appuser -s /sbin/nologin -d /app && \
   chown -R 1000.1000 /app
 
+USER appuser
+
 ENTRYPOINT ["/usr/local/bin/python", "/app/app.py"]
