--- a/change-detection/Dockerfile
+++ b/change-detection/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.12-slim
+ENV PYTHONUNBUFFERED=true
 WORKDIR /app
 COPY requirements.txt /app/
 COPY app.py /app/
@@ -8,7 +9,6 @@ RUN pip install -r requirements.txt --no-cache-dir --no-compile
 RUN groupadd --gid 1000 appuser && \
   useradd --uid 1000 --gid 1000 -M appuser -s /sbin/nologin -d /app && \
   chown -R 1000.1000 /app
-
 USER appuser
 
 ENTRYPOINT ["/usr/local/bin/python", "/app/app.py"]
