--- a/k8s-manifests/30-change-detection.yaml
+++ b/k8s-manifests/30-change-detection.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: change-detection
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
       - name: change-detection
         image: bentastic27/knative-route53-ddns-detection:latest
