switching to sidecar

--- a/k8s-manifests/00-namespace.yaml
+++ b/k8s-manifests/00-namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: knative-route53-ddns
   labels:
-    istio.io/dataplane-mode: ambient
+    istio-injection: enabled
